Fix .nav-center does not centered in components/nav.sass

--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -65,6 +65,7 @@ a.nav-item
   +overflow-touch
   align-items: stretch
   display: flex
+  flex-basis: 0
   flex-grow: 1
   flex-shrink: 0
   max-width: 100%
